--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,21 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.0.1
+
+16 August 2013
+
+### Bugfixes
+
+* `read.concat` updated to use `count.fields` to determine the 
+  correct number of columns that the resulting `data.frame` 
+  should have.
+
+### Feature change
+
+* `Reshape` now has an option to remove the `rownames` from the
+  output, set to `TRUE` by default.
+
 ## 1.0
 
 12 August 2013
