--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,26 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.0.2
+
+17 August 2013
+
+### Bugfixes
+
+* When `Stacked` results in a list of length 1, it is "unlisted"
+  before being returned.
+* `Reshape` (and as a result, `concat.split.multiple(..., 
+  direction = "long")`) has been enhanced by the addition of a
+  feature to automatically add an ID variable if the present 
+  "IDs" are not unique.
+
+## Feature Changes
+
+New functions added:
+
+* getanID
+* :::Names
+
 ## 1.0.1
 
 16 August 2013
