--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,15 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.1.0
+
+18 August 2013
+
+### Enhancement
+
+* `Stacked` and `merge.stack` now made MUCH faster using almost
+  a pure `data.table` solution.
+
 ## 1.0.2
 
 17 August 2013
