--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,15 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.2.0
+
+27 August 2013
+
+### Enhancement
+
+* Further refinement of `Stacked` and `merge.stack`. `merge.stack`
+  is now faster than `Reshape`, at least for large datasets.
+
 ## 1.1.0
 
 18 August 2013
