--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,20 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.2.1
+
+20 October 2013
+
+### Feature Changes
+
+New function added:
+
+* :::charBinaryMat
+
+  `concat.split.expanded` did not previously support expanding 
+  "character" data. `charBinaryMat` has been included to handle
+  such cases.
+
 ## 1.2.0
 
 27 August 2013
