--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,39 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.3.0
+
+27 October 2013
+
+### Feature Changes
+
+* Due to changes resulting from the introduction of `numMat` and
+  `charMat`, `concat.split.expanded` and `concat.split` now have 
+  an additional argument, `type`, which takes a value of either
+  `"numeric"` or `"character"`. It is set to a default of 
+  `type = "numeric"` in the case of `concat.split.expanded` and 
+  `type = NULL` in the case of `concat.split`.
+
+Added functions:
+
+* :::numMat
+
+  `numMat` replaces `binaryMat` and `valueMat` for numeric data.
+
+* :::charMat
+
+  `charMat` replaces `charBinaryMat` for string data.
+
+Dropped functions:
+
+Due to changes introduced after recommendations by @flodel, 
+the following functions have been rewritten as `numMat` and 
+`charMat`
+
+* :::binaryMat
+* :::valueMat
+* :::charBinaryMat
+
 ## 1.2.1
 
 20 October 2013
@@ -20,8 +53,8 @@ New function added:
 * :::charBinaryMat
 
   `concat.split.expanded` did not previously support expanding 
-  "character" data. `charBinaryMat` has been included to handle
-  such cases.
+  "character" data. Due to prompting by @juba, `charBinaryMat` 
+  has been included to handle such cases.
 
 ## 1.2.0
 
@@ -91,7 +124,7 @@ Initial commit of splitstacshape with the following main functions:
 
 ### Full list of functions
 
-*Non-exported functions are indicated with ::: before their names*
+*Non-exported functions are indicated with ::: before their names.*
 
 * concat.split.compact
 * concat.split.expanded
