--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,21 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.3.1
+
+08 October 2014
+
+### Added functions:
+
+* `cSplit`
+
+  Before the release of 1.4.0, most of the `concat.split*` 
+  functions would become simple wrappers for `cSplit`, which
+  is much more efficient than the previous implementations.
+  The earlier functions will remain for compatability purposes.
+  Since `cSplit` is already in use, it will be an exported
+  function.
+
 ## 1.3.0
 
 27 October 2013
