--- a/NEWS
+++ b/NEWS
@@ -9,14 +9,16 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
-## 1.3.1/1.3.2
+## 1.3.1/1.3.2/1.3.3
 
-08 October 2014
+08/09 October 2014
 
 ### Enhancement
 
 * `concat.split.compact` is now a wrapper for `cSplit` and
   not for `:::read.concat`.
+* `concat.split.expanded` and `concat.split.list` now made
+  `data.table` compatable. 
 
 Added functions:
 
