--- a/NEWS
+++ b/NEWS
@@ -9,9 +9,11 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
-## 1.3.1/1.3.2/1.3.3/1.3.4
+## 1.3.1 -- 1.3.5
 
 08/09 October 2014
+
+Incremental cleanups to get ready for V1.4.0
 
 ### Enhancement
 
