--- a/NEWS
+++ b/NEWS
@@ -9,9 +9,9 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
-## 1.3.1 -- 1.3.5
+## 1.3.1 -- 1.3.6
 
-08/09 October 2014
+08/10 October 2014
 
 Incremental cleanups to get ready for V1.4.0
 
@@ -22,6 +22,9 @@ Incremental cleanups to get ready for V1.4.0
   `:::read.concat` to split up the values.
 * `concat.split.expanded` and `concat.split.list` now made
   `data.table` compatable. 
+* `concat.split.list` and `concat.split.expanded` given short
+  name forms (`cSplit_l` and `cSplit_e`).
+
 
 Added functions:
 
@@ -33,6 +36,11 @@ Added functions:
   The earlier functions will remain for compatability purposes.
   Since `cSplit` is already in use, it will be an exported
   function.
+
+* :::.collapseMe
+
+  Allows the use of `sep = "var.stubs"` in `Stacked` and
+  `merged.stack`. 
 
 ## 1.3.0
 
