--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,7 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
-## 1.3.1 -- 1.3.6
+## 1.3.1 -- 1.3.7
 
 08/10 October 2014
 
@@ -25,7 +25,6 @@ Incremental cleanups to get ready for V1.4.0
 * `concat.split.list` and `concat.split.expanded` given short
   name forms (`cSplit_l` and `cSplit_e`).
 
-
 Added functions:
 
 * `cSplit`
@@ -36,6 +35,11 @@ Added functions:
   The earlier functions will remain for compatability purposes.
   Since `cSplit` is already in use, it will be an exported
   function.
+
+* `stratified`
+
+  A function to take fixed or proportional samples by group
+  from a `data.frame` or `data.table.
 
 * :::.collapseMe
 
