--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,20 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.3.8
+
+12 October 2014
+
+### Added functions
+
+* `cSplit_f`
+
+  The "_f" is both representative of `fread`, which this
+  function uses to split the concatenated cells, and "fixed"",
+  which is indicative of the fact that this function would
+  only work if the number of resulting columns is the same
+  for each row in the input.
+
 ## 1.3.1 -- 1.3.7
 
 08/10 October 2014
