--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,12 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
   only work if the number of resulting columns is the same
   for each row in the input.
 
+* `expandRows`
+
+  "Expand" the rows of a `data.frame` or a `data.table` either
+  by values specified in a column of the input dataset or by
+  a vector specifying the number of times to repeat each row.
+
 ## 1.3.1 -- 1.3.7
 
 08/10 October 2014
