--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,17 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.4.0
+
+13 October 2014
+
+See 1.3.0 -- 1.3.8 for details of changes.
+
+`cSplit` now replaces `concat.split.compact` and 
+`concat.split.multiple` in `concat.split`; `cSplit_f` has been
+introduced as a related function. Other new functions are
+`stratified` and `expandRows`.
+
 ## 1.3.8
 
 12 October 2014
@@ -28,6 +39,12 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
   "Expand" the rows of a `data.frame` or a `data.table` either
   by values specified in a column of the input dataset or by
   a vector specifying the number of times to repeat each row.
+
+### Enhancement
+
+* `Reshape`, `Stacked`, and `merged.stack` now try to guess
+  the "`id.vars`" values based on the values in "`var.stubs`".
+  The values can still be specified manually.
 
 ## 1.3.1 -- 1.3.7
 
