--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,12 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.4.1
+
+18 October 2014
+
+Bug in `:::.stripWhite` when using `"|"` as a delimiter fixed.
+
 ## 1.4.0
 
 13 October 2014
