--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,14 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.4.2
+
+23 October 2014
+
+* `listCol_l` and `listCol_w` added as utilities for unlisting 
+  or flattening columns stored as `list`s in `data.frame`s and
+  `data.table`s.
+
 ## 1.4.1
 
 18 October 2014
