--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,13 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 1.4.3
+
+20 March 2018
+
+* Updated the NAMESPACE to address the NOTES when building 
+  the package
+
 ## 1.4.2
 
 23 October 2014
