--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,19 @@ BugReports        : http://github.com/mrdwab/splitstackshape/issues
 
 ---------------------------------------------------------------------
 
+## 2.0.1
+
+21 March 2018
+
+* Changed data.table dependency to >= 1.10.5. Install the development
+  version using 
+      
+      remove.packages("data.table")
+      install.packages("data.table", type = "source",
+        repos = "http://Rdatatable.github.io/data.table")
+
+* Changed R dependency to >= 3.2.0 for the `lengths()` function.
+
 ## 1.4.3
 
 20 March 2018
